--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
     font-family:'Montserrat-Regular';
     src: url(fonts/Montserrat-Regular.ttf) format('truetype');
     src: url(fonts/Montserrat-Bold.ttf) format('truetype');
-    src: url(fonts/Montserrat-Light.ttf) format('truetype')
+    src: url(fonts/Montserrat-Light.ttf) format('truetype');
 }
 
 :root {
