--- a/css/style.css
+++ b/css/style.css
@@ -1,17 +1,22 @@
-
 @font-face {
     font-family: 'Montserrat-Regular';
-    src: url('fonts/Montserrat-Regular.ttf') format('truetype');
+    src: url('https://steelglow.kz/css/fonts/Montserrat-Regular.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
 }
 
 @font-face {
     font-family: 'Montserrat-Bold';
-    src: url('fonts/Montserrat-Bold.ttf') format('truetype');
+    src: url('https://steelglow.kz/css/fonts/Montserrat-Bold.ttf') format('truetype');
+    font-weight: bold;
+    font-style: normal;
 }
 
 @font-face {
     font-family: 'Montserrat-Light';
-    src: url('fonts/Montserrat-Light.ttf') format('truetype');
+    src: url('https://steelglow.kz/css/fonts/Montserrat-Light.ttf') format('truetype');
+    font-weight: 300;
+    font-style: normal;
 }
 
 :root {
