--- a/css/style.css
+++ b/css/style.css
@@ -78,11 +78,11 @@
 }
 
 ::-webkit-scrollbar-track {
-    background-color: #f1f1f159;
+    background-color: var(--green-color);
 }
 
 ::-webkit-scrollbar-thumb {
-    background-color: var(--bg-color);
+    background-color: var(--white-color);
     border-radius: 4px;
 }
 
