--- a/css/style.css
+++ b/css/style.css
@@ -594,3 +594,247 @@ header {
 }
 
 /*--- What's app Button ---*/
+
+
+.bottom-feeds {
+    display: flex;
+    align-content: center;
+    justify-content: center;
+    background-image: linear-gradient(rgba(49, 48, 48, 0.39), rgba(73, 71, 71, 0.363)), url(img/bg.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 100%;
+    height: 826px;
+}
+
+.form-feedsback_bg {
+    background: #fff;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    margin-top: 120px;
+    width: 506px;
+    box-shadow: 0px 30px 30px rgb(0 0 0 / 56%);
+    border-radius: 5px;
+    margin-bottom: 0px;
+    height: 505px;
+}
+
+.form-subtitle>h3 {
+    text-align: center;
+    font-size: 20px;
+    line-height: 26px;
+    padding-left: 130px;
+    padding-right: 130px;
+    margin-block-start: 28px;
+    margin-block-end: 39px;
+    font-weight: 300;
+}
+
+
+.form-feedback {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+}
+
+.piggy-container-text>span {
+    color: var(--color-bg-section);
+}
+
+.name-input {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 52px;
+}
+
+.name-input>label {
+    font-size: 13px;
+    line-height: 21px;
+    color: var(--color-bg);
+    margin-left: 46px;
+}
+
+.name-input>input {
+    border: none;
+    border-bottom: 1px solid rgb(10 9 9 / 43%);
+    padding-top: 5px;
+    padding-bottom: 8px;
+    outline: none;
+    width: 408px;
+    margin-left: 46px;
+    background-color: #fff;
+}
+
+.name-input>input::placeholder {
+    font-size: 14px;
+    line-height: 23px;
+    color: #000;
+}
+
+.phone-input {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 52px;
+}
+
+.phone-input>label {
+    font-size: 13px;
+    line-height: 21px;
+    color: var(--color-bg);
+    margin-left: 46px;
+}
+
+.phone-input>input {
+    border: none;
+    border-bottom: 1px solid rgb(10 9 9 / 43%);
+    padding-top: 5px;
+    padding-bottom: 8px;
+    outline: none;
+    width: 408px;
+    margin-left: 46px;
+    background-color: #fff;
+}
+
+.phone-input>input::placeholder {
+    font-size: 14px;
+    line-height: 23px;
+    color: #000;
+}
+
+.email-input {
+    display: flex;
+    flex-direction: column;
+}
+
+.email-input>label {
+    font-size: 13px;
+    line-height: 21px;
+    color: var(--color-bg);
+    margin-left: 46px;
+}
+
+.email-input>input {
+    border: none;
+    border-bottom: 1px solid rgb(10 9 9 / 43%);
+    padding-top: 5px;
+    padding-bottom: 8px;
+    outline: none;
+    width: 408px;
+    margin-left: 46px;
+    background-color: #fff;
+}
+
+.email-input>input::placeholder {
+    font-size: 14px;
+    line-height: 23px;
+    color: #000;
+}
+
+.form-feedback-btn {
+    display: flex;
+    justify-content: flex-end;
+    margin-bottom: 27px;
+}
+
+.form-feedback-btn>button {
+    background-color: var(--white-color);
+    margin-top: 10px;
+    padding-left: 22px;
+    margin-right: 48px;
+    padding-right: 22px;
+    padding-top: 9px;
+    padding-bottom: 9px;
+    border: 1px solid #3a3939;
+    cursor: pointer;
+    box-shadow: 1px 1px 1px 1px #00000063;
+    border-radius: 12px;
+}
+
+.form-feedback-btn>button>a {
+    text-decoration: none;
+    color: #ccc;
+}
+
+.form-feedback-btn>button:hover {
+    color: var(--white-color);
+    background-color: var(--green-color);
+}
+
+.form-feedback-btn>button:hover .btn-text {
+    color: #000;
+}
+
+.form-feedback-btn>button>span {
+    font-size: 13px;
+    line-height: 21px;
+    text-align: center;
+    text-transform: uppercase;
+    color: #ffffff;
+}
+
+
+/* --- Chebox - bottom feedback ---*/
+.form-feedback-container-checkbox {
+    display: block;
+    position: relative;
+    padding-left: 25px;
+    margin-bottom: 20px;
+    margin-top: 17.76px;
+    margin-left: 26px; 
+    cursor: pointer;
+    font-size: 14px;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
+.form-feedback-container-checkbox input {
+    position: absolute;
+    opacity: 0;
+    cursor: pointer;
+    height: 0;
+    width: 0;
+}
+
+.checkmark {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 18px;
+    width: 18px;
+    background-color: #eee;
+    border-radius: 1px;
+}
+
+.form-feedback-container-checkbox:hover input~.checkmark {
+    background-color: #ccc;
+}
+
+.form-feedback-container-checkbox input:checked~.checkmark {
+    background-color: var(--green-color);
+}
+
+.checkmark:after {
+    content: "";
+    position: absolute;
+    display: none;
+}
+
+.form-feedback-container-checkbox input:checked~.checkmark:after {
+    display: block;
+}
+
+.form-feedback-container-checkbox .checkmark:after {
+    left: 7px;
+    top: 2px;
+    width: 5px;
+    height: 10px;
+    border: solid white;
+    border-width: 0 3px 3px 0;
+    -webkit-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    transform: rotate(45deg);
+}
