--- a/css/mobile.css
+++ b/css/mobile.css
@@ -118,22 +118,34 @@
         width: 390px;
     }
 
-         .form-feedsback_bg {
-             margin-right: 0px;
-             width: 480px;
-         }
-    
-         .name-input>input {
-             width: 368px;
-         }
-    
-         .phone-input>input {
-             width: 368px;
-         }
-    
-         .email-input>input {
-             width: 398px;
-         }
+    .form-feedsback_bg {
+        margin-right: 0px;
+        width: 480px;
+    }
+
+    .name-input>input {
+        width: 368px;
+    }
+
+    .phone-input>input {
+        width: 368px;
+    }
+
+    .email-input>input {
+        width: 398px;
+    }
+
+    .form-feedback-btn {
+        display: flex;
+        justify-content: center;
+        margin-bottom: 27px;
+        margin-right: 0px;
+    }
+
+    .form-feedback-btn > button {
+        margin-right: 8px;
+    }
+
 }
 
 
