--- a/css/style.css
+++ b/css/style.css
@@ -84,6 +84,7 @@
 ::-webkit-scrollbar-thumb {
     background-color: var(--white-color);
     border-radius: 4px;
+    border: 2px solid #002d0e;
 }
 
 
@@ -341,50 +342,59 @@ header {
     display: flex;
     flex-direction: row;
     align-items: center;
-    margin-bottom: 300px;
+    flex-wrap: wrap;
+    margin-bottom: 150px;
 }
 
-.catalog > a {
-    transition: transform 0.8s cubic-bezier(0.25, 0.1, 0.25, 1), color 0.8s cubic-bezier(0.25, 0.1, 0.25, 1);
-}
-
-.catalog > a:hover {
-    transform: scale(1.1);
-    cursor: pointer;
-    color: #3a3939;
-}
 
 .catalog-item {
-    width: 380px;
-    height: 320px;
+    width: 500px;
+    height: 630px;
     background-color: #002300;
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
+    align-items: center;
     margin-right: 50px;
     border-radius: 12px;
     box-shadow: 10px 10px 16px 0px #3a3939;
+    transition: height 0.5s ease;
+    overflow: hidden;
+}
+
+.hide-content {
+    display: none;
 }
 
 
 
-.catalog-item > img {
+.catalog-item > a > img {
     background: var(--white-color);
     width: 300px;
-    margin-top: 30px;
+    margin-top: 50px;
     border-radius: 12px;
-    margin-left: 41px;
+    margin-left: 0px;
+    height: 320px;
+    object-fit: contain;
 }
 
 .title-item {
-    margin-top: 10px;
+    margin-top: 40px;
     margin-left: 41px;
+    padding-right: 50px;
 }
 
 .title-item > span {
     font-weight: 600;
     color: var(--white-color);
-    font-size: 18px;
+    font-size: 16px;
+}
+
+.title-item > p {
+    margin-block-end: 0px;
+    margin-block-start: 0px;
+    font-weight: 600;
+    color: var(--white-color);
+    font-size: 16px;
 }
 
 .phone-ordering {
@@ -837,4 +847,31 @@ header {
     -webkit-transform: rotate(45deg);
     -ms-transform: rotate(45deg);
     transform: rotate(45deg);
+}
+
+
+.btn-section-third {
+    text-align: left;
+}
+
+.btn-section-third .button_show_more {
+    background: #e3b87300;
+    border: 2px solid var(--white-color);
+    padding: 12px 60px;
+    color: var(--white-color);
+    font-size: 16px;
+    font-weight: 500;
+    transition: transform .3s;
+    border-radius: 5px;
+    margin-left: 75px;
+    margin-bottom: 30px;
+    text-transform: uppercase;
+    transition: transform .3s;
+}
+
+.btn-section-third .button_show_more:hover {
+    color: var(--white-color);
+    cursor: pointer;
+    transform: scale(1.1);
+    border: 2px solid var(--white-color);
 }
